--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <h2>Weekly Projects</h2>
 <ol>
-  <li><a href="/1_ANSI_Terminal">Sketch #1: ANSI Terminal</a></li>
+  <li><a href="1_ANSI_Terminal">Sketch #1: ANSI Terminal</a></li>
   <li></li>
   <li></li>
   <li></li>
