--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <h2>Weekly Projects</h2>
 <ol>
   <li><a href="1_ANSI_Terminal">Sketch #1: ANSI Terminal</a></li>
-  <li></li>
+  <li><a href="2_Asemic_Text">Sketch #2: Asemic Text</a></li>
   <li></li>
   <li></li>
 </ol>
+
 
 
 <br><br>
