--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <ol>
   <li><a href="1_ANSI_Terminal">Sketch #1: ANSI Terminal</a></li>
   <li><a href="2_Asemic_Text">Sketch #2: Asemic Text</a></li>
-  <li></li>
+  <li><a href="3_concrete_poetry">Sketch #3: Concrete Poetry</a></li>
   <li></li>
 </ol>
 
