--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <li><a href="4_opentype">Sketch #4: Opentype.js Experiments</a></li>
 </ol>
 
+<h2>Final</h2>
+
+<a href="https://itp.beverlychou.com/computational-approaches-to-typography/typo-chrome-ext-final.crx">Final</a>
 
 
 <br><br>
